# realestate-editorial-agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: daily-editorial.yml
cowork/: PROMPT.md
deploy/: deploy.sh  push-secrets.sh  scheduler.sh
docs/: 01-arquitectura.md  02-instalacion.md  03-skills.md  04-agentes-langgraph.md  05-publicacion-redes.md  06-scheduling.md  07-cowork.md  08-mejores-practicas.md  09-ui.md  10-deploy-gcp.md  11-managed-agents.md
scheduling/: crontab.example  launchd.plist.example
skills/: README.md
skills/blog-publishing/: SKILL.md
skills/critical-review/: SKILL.md
skills/editorial-writing/: SKILL.md
skills/fact-check/: SKILL.md
skills/image-generation/: SKILL.md
skills/news-research/: SKILL.md
skills/social-publishing/: SKILL.md
src/editorial_team/: __init__.py  config.py  gcp_secrets.py  graph.py  llm.py  publishing.py  run_daily.py  schemas.py  services.py  state.py  storage.py
src/editorial_team/agents/: __init__.py  critic.py  curator.py  fact_checker.py  illustrator.py  producer.py  publisher.py  scout.py  social_adapter.py  writer.py
src/editorial_team/integrations/: __init__.py  image_host.py  images.py  managed_agents.py  search.py  upload_post.py  wordpress.py
src/editorial_team/webapp/: __init__.py  app.py
src/editorial_team/webapp/templates/: base.html  index.html  run_detail.html
src/editorial_team/webapp/templates/partials/: publication.html
tests/: test_schemas.py  test_smoke.py  test_storage.py
