[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realestate-editorial-agents"
version = "0.1.0"
description = "Equipo editorial multiagente (LangGraph + Claude) que investiga, valida, redacta y publica noticias de Real Estate de Argentina y Latam."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sredondomercuria" }]
keywords = ["langgraph", "claude", "anthropic", "agents", "real-estate", "editorial"]

dependencies = [
    "anthropic>=0.49.0",
    "langgraph>=0.2.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
images = ["openai>=1.40"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
editorial-daily = "editorial_team.run_daily:main"

[tool.hatch.build.targets.wheel]
packages = ["src/editorial_team"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
