[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realestate-editorial-agents"
version = "0.2.0"
description = "Equipo editorial multiagente (LangGraph + Claude) que investiga, valida, redacta y publica noticias de Real Estate de Argentina y Latam, con dashboard FastAPI y listo para GCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sredondomercuria" }]
keywords = ["langgraph", "claude", "anthropic", "agents", "real-estate", "editorial", "fastapi", "gcp"]

dependencies = [
    "anthropic>=0.49.0",
    "langgraph>=0.2.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "markdown>=3.6",
    "google-genai>=1.0",
]

[project.optional-dependencies]
integrations = ["cloudinary>=1.40", "tavily-python>=0.5"]
gcp = ["google-cloud-secret-manager>=2.20"]
dev = ["pytest>=8.0", "ruff>=0.4"]
all = ["cloudinary>=1.40", "tavily-python>=0.5", "google-cloud-secret-manager>=2.20", "pytest>=8.0"]

[project.scripts]
editorial-daily = "editorial_team.run_daily:main"
editorial-web = "editorial_team.webapp.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/editorial_team"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
